Next and previous links have better alignment and margins. Post numbers on pages deeper than 1 are now correct. SEO-friendly pagination URLs.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -421,6 +421,11 @@ pre {
   padding: 10px;
 }
 
+/* Pagination */
+.next {
+  float: right;
+}
+
 /* iPhone size */
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
